Fixes mis-alignment on index page
- Apply margin left of document header to show page only
- Document styles to apply to Blacklight 8
- Clean up SCSS syntax

--- a/app/assets/stylesheets/funnelcake.css.scss
+++ b/app/assets/stylesheets/funnelcake.css.scss
@@ -114,12 +114,20 @@ span.constraint .remove {
 	flex: 0 0 50% !important;
 }
 
+/* Blacklight 8 Adjustments */
+
 .facet-limit-active .card-header .btn {
-	color: #000
+	color: #000;
 }
 
 .blacklight-catalog-index {
 	.blacklight-icons {
 		width: 32px;
+	}
+}
+
+.blacklight-catalog-show {
+	header.documentHeader.row {
+		margin-left: 0px;
 	}
 }
